--- a/testlogin2.yml
+++ b/testlogin2.yml
@@ -21,7 +21,7 @@ jobs:
           host: ${{ env.hostname }}
           port: 22
           username: emarciunas
-          key: "${{ secrets.PRIVATEKEY2 }}"
+          key: "${{ secrets.SSH_KEY }}"
           script_stop: true     # Stop script after first failure
           script: |
             hostname
